Optimized label localizer and started working on fixing better rolls 5e showing lbs. as weight in stead of kg.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,4 +1,5 @@
 {
   "metricsystem.meters": "Meters",
-  "metricsystem.kilometers": "Kilometers"
+  "metricsystem.kilometers": "Kilometers",
+  "lbs.": "kg."
 }
