Fixed betterRolls5e showing lbs. instead of kg.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,6 +1,5 @@
 {
-  "lbs.": "kg.",
   "metricsystem.meters": "Meters",
   "metricsystem.kilometers": "Kilometers",
-  "test": "test123"
+  "lbs.": "kg."
 }
