Added conversion for actors, somewhat for items and modified the list of translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
   "metricsystem.meters": "Meters",
   "metricsystem.kilometers": "Kilometers",
-  "lbs.": "kg."
+  "lbs.": "kg.",
+  "FeetAcronym": "m"
 }
